Updated website name in pages

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,7 @@
 <div id="nav-bar">
   <input id="nav-toggle" type="checkbox" />
   <div id="nav-header">
-    <a id="nav-title" href="/"><i class="fas fa-home"></i>The Horse's Head</a
+    <a id="nav-title" href="/"><i class="fas fa-home"></i>2 Sugar Cubes</a
     ><label for="nav-toggle"><span id="nav-toggle-burger"></span></label>
     <hr />
   </div>
@@ -28,7 +28,7 @@
       <div id="nav-footer-titlebox">
         <a
           id="nav-footer-title"
-          href="https://github.com/magnussonl/"
+          href="https://github.com/2sugarcubes/"
           target="_blank"
           >Lucy</a
         ><span id="nav-footer-subtitle">Webmaster</span>
