Added buttons to the footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,5 +9,16 @@
       class="license"
       src='{{ "assets/license.png" | relative_url}}'
       alt="Public Domain License"
-  /></a>
+    />
+  </a>
 </p>
+<div class="grid">
+  <img
+    src="/assets/buttons/debtdeath-alwayswillbe.png"
+    alt="Always was and always will be Aboriginal Land"
+  />
+  <img
+    src="/assets/buttons/queer-coded.png"
+    alt="You're telling me a Queer Coded this?"
+  />
+</div>
