--- a/_includes/html_head.html
+++ b/_includes/html_head.html
@@ -18,3 +18,8 @@
   defer
 ></script>
 <script src="/js/nav.js" defer></script>
+<script
+  src="https://kit.fontawesome.com/75ef340044.js"
+  crossorigin="anonymous"
+  async
+></script>
