Added checks for the sidebar on mobile

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,6 @@
 <script src="{{ js/nav.js | relative_url }}" defer></script>
 <div id="nav-bar">
-  <input id="nav-toggle" type="checkbox" />
+  <input id="nav-toggle" type="checkbox" checked />
   <div id="nav-header">
     <a id="nav-title" href="/"><i class="fas fa-home"></i>2 Sugar Cubes</a
     ><label for="nav-toggle"><span id="nav-toggle-burger"></span></label>
