--- a/css/sidebar.sass
+++ b/css/sidebar.sass
@@ -6,6 +6,20 @@ html, body
   background: var(--rp-base)
 
 #nav-toggle:checked
+  @media(max-width: 750px)
+    & ~ #nav-content
+      display: none
+
+    & ~ #nav-footer
+      display: none
+
+    & ~ #nav-header
+      width: calc(var(--navbar-width-min) + 16px)
+
+    #nav-bar:has(&)
+      height: 80px
+      width: 60px
+
   & ~ #nav-header
     width: calc(var(--navbar-width-min) - 16px)
 
@@ -39,7 +53,7 @@ html, body
       .fas
         min-width: calc(100% - 16px)
   
-  & ~ #nav-footer    
+  & ~ #nav-footer
     #nav-footer-avatar
       margin-left: 0
       left: 50%
@@ -49,6 +63,8 @@ html, body
       opacity: 0
       transition: opacity .1s
       pointer-events: none
+
+  
 
 #nav-bar
   position: fixed
@@ -283,3 +299,5 @@ label[for="nav-footer-toggle"]
   &::-webkit-scrollbar-thumb
     border-radius: 99px
     background-color: #D62929
+
+
