Fixed too tall sidebar on mobile

--- a/css/sidebar.sass
+++ b/css/sidebar.sass
@@ -5,6 +5,9 @@ html, body
   margin: 0
   background: var(--rp-base)
 
+#nav-bar
+  height: 95vh
+
 #nav-toggle:checked
   @media(max-width: 750px)
     & ~ #nav-content
