--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,11 @@
           <h1>{{ page.title }}</h1>
           {% if page.pre-text %} {{ page.pre-text | markdownify }} {% endif %}
         </hgroup>
-        {{ content }}
+        {% capture anchor_body %}
+        <i class="fa fa-link" aria-hidden="true"></i>
+        {% endcapture %} {% include anchor_headings.html html=content
+        anchorBody=anchor_body anchorAttrs='aria-label="Permalink to %heading%"'
+        %}
       </article>
     </main>
   </body>
