--- a/_includes/html_head.html
+++ b/_includes/html_head.html
@@ -23,3 +23,9 @@
   crossorigin="anonymous"
   async
 ></script>
+<script
+  type="text/javascript"
+  async
+  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?
+config=TeX-AMS-MML_HTMLorMML"
+></script>
