--- a/css/code.css
+++ b/css/code.css
@@ -1,7 +1,7 @@
 /* from https://raw.githubusercontent.com/mojombo/tpw/master/css/syntax.css */
 
 .highlight .c {
-  color: var(--rp-pine);
+  color: var(--rp-foam);
   font-style: italic;
 } /* Comment */
 .highlight .err {
@@ -10,12 +10,13 @@
 } /* Error */
 .highlight .k {
   font-weight: bold;
+  color: var(--rp-pine);
 } /* Keyword */
 .highlight .o {
   font-weight: bold;
 } /* Operator */
 .highlight .cm {
-  color: var(--rp-pine);
+  color: var(--rp-foam);
   font-style: italic;
 } /* Comment.Multiline */
 .highlight .cp {
@@ -23,7 +24,7 @@
   font-weight: bold;
 } /* Comment.Preproc */
 .highlight .c1 {
-  color: var(--rp-pine);
+  color: var(--rp-foam);
   font-style: italic;
 } /* Comment.Single */
 .highlight .cs {
@@ -88,11 +89,14 @@
   font-weight: bold;
 } /* Keyword.Type */
 .highlight .m {
-  color: var(--rp-rose);
+  color: var(--rp-love);
 } /* Literal.Number */
 .highlight .s {
-  color: var(--rp-rose);
+  color: var(--rp-love);
 } /* Literal.String */
+.highlight .n {
+  color: var(--rp-rose);
+} /* Name */
 .highlight .na {
   color: var(--rp-iris);
 } /* Name.Attribute */
@@ -103,6 +107,10 @@
   color: var(--rp-gold);
   font-weight: bold;
 } /* Name.Class */
+.highlight .nd {
+  color: var(--rp-gold);
+  font-weight: bold;
+} /* Name.Macro */
 .highlight .no {
   color: var(--rp-iris);
 } /* Name.Constant */
@@ -118,7 +126,7 @@
   font-weight: bold;
 } /* Name.Function */
 .highlight .nn {
-  color: var(--rp-highlight-low);
+  color: var(--rp-muted);
 } /* Name.Namespace */
 .highlight .nt {
   color: var(--rp-iris);
@@ -133,49 +141,49 @@
   color: var(--rp-muted);
 } /* Text.Whitespace */
 .highlight .mf {
-  color: var(--rp-rose);
+  color: var(--rp-love);
 } /* Literal.Number.Float */
 .highlight .mh {
-  color: var(--rp-rose);
+  color: var(--rp-love);
 } /* Literal.Number.Hex */
 .highlight .mi {
-  color: var(--rp-rose);
+  color: var(--rp-love);
 } /* Literal.Number.Integer */
 .highlight .mo {
-  color: var(--rp-rose);
+  color: var(--rp-love);
 } /* Literal.Number.Oct */
 .highlight .sb {
-  color: var(--rp-rose);
+  color: var(--rp-love);
 } /* Literal.String.Backtick */
 .highlight .sc {
-  color: var(--rp-rose);
+  color: var(--rp-love);
 } /* Literal.String.Char */
 .highlight .sd {
-  color: var(--rp-rose);
+  color: var(--rp-love);
 } /* Literal.String.Doc */
 .highlight .s2 {
-  color: var(--rp-rose);
+  color: var(--rp-love);
 } /* Literal.String.Double */
 .highlight .se {
-  color: var(--rp-rose);
+  color: var(--rp-love);
 } /* Literal.String.Escape */
 .highlight .sh {
-  color: var(--rp-rose);
+  color: var(--rp-love);
 } /* Literal.String.Heredoc */
 .highlight .si {
-  color: var(--rp-rose);
+  color: var(--rp-love);
 } /* Literal.String.Interpol */
 .highlight .sx {
-  color: var(--rp-rose);
+  color: var(--rp-love);
 } /* Literal.String.Other */
 .highlight .sr {
   color: var(--rp-iris);
 } /* Literal.String.Regex */
 .highlight .s1 {
-  color: var(--rp-rose);
+  color: var(--rp-love);
 } /* Literal.String.Single */
 .highlight .ss {
-  color: var(--rp-rose);
+  color: var(--rp-love);
 } /* Literal.String.Symbol */
 .highlight .bp {
   color: var(--rp-foam);
