--- a/css/style.css
+++ b/css/style.css
@@ -170,11 +170,7 @@ code {
 
 /* Set up color schemes for basic HTML elements */
 body {
-  background: linear-gradient(
-    to bottom,
-    rgba(3, 75, 82, 1) 0%,
-    rgba(3, 75, 82, 0) 100%
-  );
+  background: var(--rp-base);
   height: 100%;
   margin: 0;
   background-repeat: no-repeat;
