fix(sidebar): fix blog icon

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,7 +8,7 @@
   </div>
   <div id="nav-content">
     <a class="nav-button" href="/blog">
-      <i class="fas fa-newspaper-o"></i><span>Blog</span>
+      <i class="fas fa-newspaper"></i><span>Blog</span>
     </a>
     <a href="/projects" class="nav-button">
       <i class="fas fa-laptop"></i><span>Projects</span>
