fix: add header to all pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,10 @@
     {% include html_head.html %}
   </head>
   <body>
+    <header>
+      2 Sugar Cubes
+      <img src="/assets/button.webp" alt="2 Sugar Cubes button" />
+    </header>
     {% include sidebar.html %}
     <article>
       {% capture anchor_body %}
