--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,6 +6,10 @@
 
   <body>
     {% include sidebar.html %}
+    <header>
+      2 Sugar Cubes
+      <img src="/assets/button.webp" alt="2 Sugar Cubes button" />
+    </header>
     <main>
       <article>
         <hgroup>
