--- a/css/style.css
+++ b/css/style.css
@@ -162,6 +162,25 @@ article {
   font-style: normal;
 }
 
+button {
+  border: none;
+  color: var(--rp-base);
+  border-radius: 10px;
+  /* rp-pine neumorphism */
+  background: linear-gradient(145deg, #245f76, #2b708c);
+  box-shadow:
+    2px 2px 4px #1e4e61,
+    -2px -2px 4px #3284a5;
+}
+
+button:active {
+  /* rp-pine neumorphism */
+  background: #286983;
+  box-shadow:
+    inset 2px 2px 4px #1e4e61,
+    inset -2px -2px 4px #3284a5;
+}
+
 code {
   font-family: "Fira Code", "Courier New", Courier, monospace;
   font-weight: 500;
@@ -297,7 +316,6 @@ footer > *:first-child {
 }
 
 /* Class definitions */
-
 .card {
   margin: auto;
   width: 50%;
@@ -306,9 +324,15 @@ footer > *:first-child {
   -webkit-backdrop-filter: blur(5px);
   background-color: rgba(20, 22, 26, 0.2);
   border-radius: 16px;
-  border: 1px solid rgba(255, 255, 255, 0.125);
+  border: 1px solid rgba(209, 213, 219, 0.3);
 }
 
+@media (prefers-color-scheme: dark) {
+  .card {
+    background-color: rgba(20, 22, 26, 0.2);
+    border: 1px solid rgba(255, 255, 255, 0.125);
+  }
+}
 .card > h1 {
   font-size: 70pt;
   padding-bottom: 20px;
@@ -371,6 +395,11 @@ img.license {
   #display {
     padding: 0px;
   }
+
+  .col {
+    display: block;
+    width: 85%;
+  }
 }
 
 #display {
@@ -393,6 +422,11 @@ div.pill {
 .row > .col + #display {
   flex: 75%;
   padding: 25px;
+}
+
+button:is(.next, .prev) {
+  background: none;
+  box-shadow: none;
 }
 
 #display:has(> #slides > .slide) > .next {
